--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
+    "locomotive-scroll": "^5.0.0-beta.13",
     "lucide-react": "^0.407.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
