some animation and select button fixed

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,7 +2,7 @@ PORT=4000
 CLOUDINARY_CLIENT_NAME=dembaz1tx
 CLOUDINARY_CLIENT_API=863472954439665
 CLOUDINARY_CLIENT_SECRET=ksl3uMBrwGyumDB1VvHgS6pDe-I
-FORNTEND_URL=http://localhost:5173/
+FORNTEND_URL=http://localhost:5173
 MONGO_URI=mongodb://127.0.0.1:27017
 JWT_SECRET_KEY=jnvkssdhoqrqpwoidasnklq
 JWT_EXPIRE=7d
