--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,7 +3,7 @@ CLOUDINARY_CLIENT_NAME=dembaz1tx
 CLOUDINARY_CLIENT_API=863472954439665
 CLOUDINARY_CLIENT_SECRET=ksl3uMBrwGyumDB1VvHgS6pDe-I
 FORNTEND_URL=http://localhost:5173
-MONGO_URI=mongodb://127.0.0.1:27017
+MONGO_URI=mongodb+srv://Jobify111:Jobify111@cluster0.m6dbe.mongodb.net/?retryWrites=true
 JWT_SECRET_KEY=jnvkssdhoqrqpwoidasnklq
 JWT_EXPIRE=7d
 COOKIE_EXPIRE=5
