--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@copilotkit/react-core": "^1.10.4",
+    "@copilotkit/react-textarea": "^1.10.4",
+    "@copilotkit/react-ui": "^1.10.4",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -21,12 +25,14 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "locomotive-scroll": "^5.0.0-beta.13",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.407.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.10",
     "react-parallax-tilt": "^1.7.232",
     "react-router-dom": "^6.24.1",
     "react-vertical-timeline-component": "^3.6.0",
